add ripple effect

--- a/lib/main_skill.html
+++ b/lib/main_skill.html
@@ -46,6 +46,7 @@
                     {{item.period}}
                   </div>
                 </paper-item-body>
+                <paper-ripple />
                 <iron-icon icon="{{item.icon}}" />
               </paper-icon-item>
             </template>
