--- a/lib/main_skill.html
+++ b/lib/main_skill.html
@@ -46,7 +46,7 @@
                     {{item.period}}
                   </div>
                 </paper-item-body>
-                <paper-ripple />
+                <paper-ripple></paper-ripple>
                 <iron-icon icon="{{item.icon}}" />
               </paper-icon-item>
             </template>
