--- a/lib/main_skill.html
+++ b/lib/main_skill.html
@@ -29,7 +29,7 @@
         <paper-material class="white list">
           <paper-listbox selectable="false">
             <template is="dom-repeat" items="{{skillValue(key)}}">
-              <paper-icon-item id="{{item.linkName}}" on-click="onClickCell">
+              <paper-icon-item on-click="onClickCell" key$="{{key}}" index$="{{index}}">
                 <div class="icon" item-icon>
                   <template is="dom-if" if="{{isEmpty(item.imageUrl)}}" >
                     <char-icon text="{{item.title}}" />
