--- a/lib/main_contact.html
+++ b/lib/main_contact.html
@@ -9,8 +9,8 @@
       color: white;
       --paper-card-header-color: white;
     }
-    .lime {
-      background: var(--paper-lime-500);
+    .light-green {
+      background: var(--paper-light-green-500);
     }
     .teal {
       background: var(--paper-teal-500);
@@ -23,6 +23,9 @@
     }
     .light-blue {
       background: var(--paper-light-blue-500);
+    }
+    .brown {
+      background: var(--paper-brown-500);
     }
     .card-header {
       @apply(--paper-font-headline);
